--- a/index.html
+++ b/index.html
@@ -1,93 +1,106 @@
 <!DOCTYPE html>
 <html lang="es" itemscope itemtype="https://schema.org/Organization">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- PRIMARY -->
-  <title>Agentes de IA en Colombia | Automatización y Ventas 24/7 - SoyAgentia</title>
-  <meta name="description" content="Agentes de IA para ventas 24/7, atención multicanal y automatización de procesos. Integración con WhatsApp, web y CRM. Implementación ágil y soporte continuo." />
-  <link rel="canonical" href="https://soyagentia.com/" />
-  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+    <!-- PRIMARY -->
+    <title>Agentes de IA en Colombia | Automatización y Ventas 24/7 - SoyAgentia</title>
+    <meta name="description" content="Agentes de IA para ventas 24/7, atención multicanal y automatización de procesos. Integración con WhatsApp, web y CRM. Implementación ágil y soporte continuo." />
+    <link rel="canonical" href="https://soyagentia.com/" />
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 
-  <!-- HREFLANG (home genérica) -->
-  <link rel="alternate" href="https://soyagentia.com/" hreflang="x-default" />
+    <!-- HREFLANG (home genérica) - incluye autorreferencia -->
+    <link rel="alternate" href="https://soyagentia.com/" hreflang="es-co" />
+    <link rel="alternate" href="https://soyagentia.com/" hreflang="es" />
+    <link rel="alternate" href="https://soyagentia.com/" hreflang="x-default" />
 
-  <!-- OPEN GRAPH / TWITTER -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://soyagentia.com/" />
-  <meta property="og:title" content="Agentes de IA en Colombia | SoyAgentia" />
-  <meta property="og:description" content="Automatización de ventas, atención 24/7 y flujos con IA en toda Colombia. Integraciones con WhatsApp, web y CRM." />
-  <meta property="og:image" content="https://soyagentia.com/og/og-home.jpg" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="SoyAgentia - Agentes de IA y Automatización" />
-  <meta property="og:site_name" content="SoyAgentia" />
-  <meta property="og:locale" content="es_CO" />
+    <!-- OPEN GRAPH / TWITTER -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://soyagentia.com/" />
+    <meta property="og:title" content="Agentes de IA en Colombia | SoyAgentia" />
+    <meta property="og:description" content="Automatización de ventas, atención 24/7 y flujos con IA en toda Colombia. Integraciones con WhatsApp, web y CRM." />
+    <meta property="og:image" content="https://soyagentia.com/og/og-home.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="SoyAgentia - Agentes de IA y Automatización" />
+    <meta property="og:site_name" content="SoyAgentia" />
+    <meta property="og:locale" content="es_CO" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@soyagentia" />
-  <meta name="twitter:creator" content="@soyagentia" />
-  <meta name="twitter:title" content="Agentes de IA en Colombia | SoyAgentia" />
-  <meta name="twitter:description" content="Automatiza ventas y soporte con agentes de IA. Implementación ágil y soporte continuo." />
-  <meta name="twitter:image" content="https://soyagentia.com/og/og-home.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@soyagentia" />
+    <meta name="twitter:creator" content="@soyagentia" />
+    <meta name="twitter:title" content="Agentes de IA en Colombia | SoyAgentia" />
+    <meta name="twitter:description" content="Automatiza ventas y soporte con agentes de IA. Implementación ágil y soporte continuo." />
+    <meta name="twitter:image" content="https://soyagentia.com/og/og-home.jpg" />
 
-  <!-- JSON-LD: Organization + Website (home) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "SoyAgentia - Agent IA SAS",
-    "url": "https://soyagentia.com/",
-    "logo": "https://soyagentia.com/logo-soyagentia.png",
-    "image": "https://soyagentia.com/og/og-home.jpg",
-    "description": "Agentes de IA para automatización de ventas, atención 24/7 e integraciones con WhatsApp, web y CRM.",
-    "foundingDate": "2024",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Medellín",
-      "addressRegion": "Antioquia",
-      "addressCountry": "CO"
-    },
-    "contactPoint": [{
-      "@type": "ContactPoint",
-      "telephone": "+57-300-900-6005",
-      "contactType": "customer service",
-      "availableLanguage": ["es"]
-    }],
-    "sameAs": ["https://wa.me/573009006005","https://instagram.com/soyagentia"]
-  }
-  </script>
-
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"WebSite",
-    "url":"https://soyagentia.com/",
-    "name":"SoyAgentia",
-    "potentialAction":{
-      "@type":"SearchAction",
-      "target":"https://soyagentia.com/?q={search_term_string}",
-      "query-input":"required name=search_term_string"
+    <!-- JSON-LD: Organization + Website (home) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "SoyAgentia - Agent IA SAS",
+      "url": "https://soyagentia.com/",
+      "logo": "https://soyagentia.com/logo-soyagentia.png",
+      "image": "https://soyagentia.com/og/og-home.jpg",
+      "description": "Agentes de IA para automatización de ventas, atención 24/7 e integraciones con WhatsApp, web y CRM.",
+      "foundingDate": "2024",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Medellín",
+        "addressRegion": "Antioquia",
+        "addressCountry": "CO"
+      },
+      "contactPoint": [{
+        "@type": "ContactPoint",
+        "telephone": "+57-300-900-6005",
+        "contactType": "customer service",
+        "availableLanguage": ["es"]
+      }],
+      "sameAs": ["https://wa.me/573009006005","https://instagram.com/soyagentia"]
     }
-  }
-  </script>
+    </script>
 
-  <!-- PERF -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="dns-prefetch" href="//wa.me" />
-  <link rel="dns-prefetch" href="//api.whatsapp.com" />
+    <script type="application/ld+json">
+    {
+      "@context":"https://schema.org",
+      "@type":"WebSite",
+      "url":"https://soyagentia.com/",
+      "name":"SoyAgentia",
+      "potentialAction":{
+        "@type":"SearchAction",
+        "target":"https://soyagentia.com/?q={search_term_string}",
+        "query-input":"required name=search_term_string"
+      }
+    }
+    </script>
 
-  <!-- ICONS / PWA -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-  <link rel="manifest" href="/site.webmanifest" />
-</head>
+    <!-- PERF -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="dns-prefetch" href="//wa.me" />
+    <link rel="dns-prefetch" href="//api.whatsapp.com" />
 
+    <!-- ICONS / PWA -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+  </head>
 
   <body>
+    <!-- H1 de respaldo para analizadores que no ejecutan JS (se elimina al cargar). -->
+    <h1 id="preload-h1" style="position:absolute;left:-9999px;width:1px;height:1px;overflow:hidden;">
+      Agentes de IA en Colombia | Automatización y Ventas 24/7
+    </h1>
+
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <script>
+      window.addEventListener('DOMContentLoaded', function () {
+        var ph = document.getElementById('preload-h1');
+        if (ph) ph.remove();
+      });
+    </script>
   </body>
 </html>
