actualizo casos de uso

--- a/index.html
+++ b/index.html
@@ -1,41 +1,55 @@
 <!DOCTYPE html>
 <html lang="es" itemscope itemtype="https://schema.org/Organization">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- PRIMARY -->
-    <title>Agentes de IA en Colombia | Automatización y Ventas 24/7 - SoyAgentia</title>
-    <meta name="description" content="Agentes de IA para ventas 24/7, atención multicanal y automatización de procesos. Integración con WhatsApp, web y CRM. Implementación ágil y soporte continuo." />
-    <link rel="canonical" href="https://soyagentia.com/" />
-    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+<head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-NHHD5TPT');</script>
+  <!-- End Google Tag Manager -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- HREFLANG (home genérica) - incluye autorreferencia -->
-    <link rel="alternate" href="https://soyagentia.com/" hreflang="es-co" />
-    <link rel="alternate" href="https://soyagentia.com/" hreflang="es" />
-    <link rel="alternate" href="https://soyagentia.com/" hreflang="x-default" />
+  <!-- PRIMARY -->
+  <title>Agentes de IA en Colombia | Automatización y Ventas 24/7 - SoyAgentia</title>
+  <meta name="description"
+    content="Agentes de IA para ventas 24/7, atención multicanal y automatización de procesos. Integración con WhatsApp, web y CRM. Implementación ágil y soporte continuo." />
+  <link rel="canonical" href="https://soyagentia.com/" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
 
-    <!-- OPEN GRAPH / TWITTER -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://soyagentia.com/" />
-    <meta property="og:title" content="Agentes de IA en Colombia | SoyAgentia" />
-    <meta property="og:description" content="Automatización de ventas, atención 24/7 y flujos con IA en toda Colombia. Integraciones con WhatsApp, web y CRM." />
-    <meta property="og:image" content="https://soyagentia.com/og/og-home.jpg" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="SoyAgentia - Agentes de IA y Automatización" />
-    <meta property="og:site_name" content="SoyAgentia" />
-    <meta property="og:locale" content="es_CO" />
+  <!-- HREFLANG (home genérica) - incluye autorreferencia -->
+  <link rel="alternate" href="https://soyagentia.com/" hreflang="es-co" />
+  <link rel="alternate" href="https://soyagentia.com/" hreflang="es" />
+  <link rel="alternate" href="https://soyagentia.com/" hreflang="x-default" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@soyagentia" />
-    <meta name="twitter:creator" content="@soyagentia" />
-    <meta name="twitter:title" content="Agentes de IA en Colombia | SoyAgentia" />
-    <meta name="twitter:description" content="Automatiza ventas y soporte con agentes de IA. Implementación ágil y soporte continuo." />
-    <meta name="twitter:image" content="https://soyagentia.com/og/og-home.jpg" />
+  <!-- OPEN GRAPH / TWITTER -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://soyagentia.com/" />
+  <meta property="og:title" content="Agentes de IA en Colombia | SoyAgentia" />
+  <meta property="og:description"
+    content="Automatización de ventas, atención 24/7 y flujos con IA en toda Colombia. Integraciones con WhatsApp, web y CRM." />
+  <meta property="og:image" content="https://soyagentia.com/og/og-home.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="SoyAgentia - Agentes de IA y Automatización" />
+  <meta property="og:site_name" content="SoyAgentia" />
+  <meta property="og:locale" content="es_CO" />
 
-    <!-- JSON-LD: Organization + Website (home) -->
-    <script type="application/ld+json">
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@soyagentia" />
+  <meta name="twitter:creator" content="@soyagentia" />
+  <meta name="twitter:title" content="Agentes de IA en Colombia | SoyAgentia" />
+  <meta name="twitter:description"
+    content="Automatiza ventas y soporte con agentes de IA. Implementación ágil y soporte continuo." />
+  <meta name="twitter:image" content="https://soyagentia.com/og/og-home.jpg" />
+
+  <!-- JSON-LD: Organization + Website (home) -->
+  <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Organization",
@@ -61,7 +75,7 @@
     }
     </script>
 
-    <script type="application/ld+json">
+  <script type="application/ld+json">
     {
       "@context":"https://schema.org",
       "@type":"WebSite",
@@ -75,32 +89,37 @@
     }
     </script>
 
-    <!-- PERF -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="dns-prefetch" href="//wa.me" />
-    <link rel="dns-prefetch" href="//api.whatsapp.com" />
+  <!-- PERF -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="dns-prefetch" href="//wa.me" />
+  <link rel="dns-prefetch" href="//api.whatsapp.com" />
 
-    <!-- ICONS / PWA -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <link rel="manifest" href="/site.webmanifest" />
-  </head>
+  <!-- ICONS / PWA -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+</head>
 
-  <body>
-    <!-- H1 de respaldo para analizadores que no ejecutan JS (se elimina al cargar). -->
-    <h1 id="preload-h1" style="position:absolute;left:-9999px;width:1px;height:1px;overflow:hidden;">
-      Agentes de IA en Colombia | Automatización y Ventas 24/7
-    </h1>
+<body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NHHD5TPT" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <!-- H1 de respaldo para analizadores que no ejecutan JS (se elimina al cargar). -->
+  <h1 id="preload-h1" style="position:absolute;left:-9999px;width:1px;height:1px;overflow:hidden;">
+    Agentes de IA en Colombia | Automatizacion con Inteligencia Artificial
+  </h1>
 
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 
-    <script>
-      window.addEventListener('DOMContentLoaded', function () {
-        var ph = document.getElementById('preload-h1');
-        if (ph) ph.remove();
-      });
-    </script>
-  </body>
+  <script>
+    window.addEventListener('DOMContentLoaded', function () {
+      var ph = document.getElementById('preload-h1');
+      if (ph) ph.remove();
+    });
+  </script>
+</body>
+
 </html>
